tests/NormalTests/paczka1/small_fuzzy/71660124.err
Error in line 8: dlEcs S862 58,2
Error in line 14: AvFNK0vj8l A79 36,8
